--- a/tagedittext/src/main/res/values/styles.xml
+++ b/tagedittext/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="textAppearance" parent="Base.TextAppearance.AppCompat.Medium">
-        <item name="android:textColor">?android:textColorPrimary</item>
-        <item name="android:textAllCaps">?textAllCaps</item>
-        <item name="android:background">@drawable/tag_background</item>
+        <item name="android:textColor">@color/tagTextForegroundColor</item>
     </style>
 </resources>
