Using composer to hold all custom attributes.

--- a/tagedittext/src/main/res/values/attrs.xml
+++ b/tagedittext/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="TagEditText">
         <attr name="textAppearance" format="reference" />
         <attr name="textBackgroundColor" format="color" />
-        <attr name="textBackgroundRadius" format="integer" />
+        <attr name="textBackgroundRadius" format="dimension" />
 
         <attr name="textPaddingTop" format="dimension" />
         <attr name="textPaddingBottom" format="dimension" />
