--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
 
     <style name="TagEditText">
         <item name="android:layout_margin">5dp</item>
-        <item name="colorAccent">@android:color/black</item>
+        <item name="textBackgroundRadius">3dp</item>
+        <item name="textBackgroundColor">@android:color/holo_orange_dark</item>
     </style>
 </resources>
